<resources>
    <string name="app_name">NewsViews</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="tutorial_first_page">Hello, I am Fahim Salam Chowdhury</string>
    <string name="tutorial_third_page">I am a software engineer</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
</resources>
