<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.tutorialfragment.TutorialFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/bottomLayout"
            app:layout_constraintLeft_toLeftOf="@id/bottomLayout"
            app:layout_constraintRight_toRightOf="@id/bottomLayout">

            <TextView
                android:id="@+id/skipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="18dp"
                android:paddingTop="28dp"
                android:paddingEnd="18dp"
                android:paddingBottom="28dp"
                android:text="@string/skip"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/bottomButtonsLayout"
                app:layout_constraintLeft_toLeftOf="@id/bottomButtonsLayout" />


            <com.rd.PageIndicatorView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="37dp"
                app:layout_constraintBottom_toBottomOf="@id/bottomButtonsLayout"
                app:layout_constraintLeft_toRightOf="@id/skipButton"
                app:layout_constraintRight_toLeftOf="@id/nextButton"
                app:piv_animationType="worm"
                app:piv_dynamicCount="true"
                app:piv_interactiveAnimation="true"
                app:piv_padding="12dp"
                app:piv_radius="8dp"
                app:piv_selectedColor="@color/colorPrimaryDark"
                app:piv_unselectedColor="@android:color/white"
                app:piv_viewPager="@id/viewPager" />

            <TextView
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="18dp"
                android:paddingTop="28dp"
                android:paddingEnd="18dp"
                android:paddingBottom="28dp"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/bottomButtonsLayout"
                app:layout_constraintRight_toRightOf="@id/bottomButtonsLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/getStartedTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/button_border_white"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/get_started"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/bottomLayout"
            app:layout_constraintLeft_toLeftOf="@id/bottomLayout"
            app:layout_constraintRight_toRightOf="@id/bottomLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>