...
    <fragment
        android:id="@+id/tutorialFragment"
        android:name="com.fahim.newsviews.ui.tutorialfragment.TutorialFragment"
        tools:layout="@layout/fragment_tutorial">
        <action
            android:id="@+id/action_tutorialFragment_to_navigationDrawerFragment"
            app:destination="@id/navigationDrawerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/main_nav_graph"
            app:popUpToInclusive="true" />
...
